--- a/style.css
+++ b/style.css
@@ -1078,3 +1078,74 @@ h4 {
     font-size: 2.5rem;
   }
 }
+
+/* tablet/iPad specific tweaks */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .header__title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 3rem;
+  }
+
+  .header__img {
+    order: -1;
+    transform: none;
+    max-width: 65%;
+    margin-bottom: 3rem;
+  }
+
+  h1 {
+    font-size: 4rem;
+    line-height: 1.2;
+  }
+
+  h4 {
+    font-size: 2.2rem;
+    margin-top: 1rem;
+  }
+
+  .btn--text {
+    font-size: 1.6rem;
+    margin-top: 2rem;
+  }
+
+  .features {
+    grid-template-columns: 1fr;
+    margin: 0 2rem;
+    gap: 6rem;
+  }
+
+  .features__feature {
+    width: 100%;
+    text-align: center;
+  }
+
+  .slide {
+    height: 47rem;
+  }
+
+  .testimonial {
+    width: 100%;
+    padding: 0 2rem;
+  }
+
+  .testimonial__author {
+    grid-template-columns: 5rem 1fr;
+  }
+
+  .operations__tab-container {
+    gap: 2rem;
+    justify-content: center;
+  }
+
+  .operations__tab {
+    padding: 1.2rem 2rem;
+    font-size: 1.6rem;
+  }
+
+  .operations__content {
+    padding: 3rem 2rem;
+  }
+}
