--- a/style.css
+++ b/style.css
@@ -86,6 +86,24 @@ body {
   color: #333;
 }
 
+.btn--mobile-nav {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2rem;
+  height: 1.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn--mobile-nav .icon {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #333;
+}
+
 /* HEADER */
 .header {
   padding: 0 3rem;
